tests/baselines/reference/objectLiteralFreshnessWithSpread.errors.txt
tests/cases/compiler/objectLiteralFreshnessWithSpread.ts(2,35): error TS2322: Type '{ z: 数字; b: 数字; extra: 数字; a: 数字; }' is not assignable to type '{ a: 任意; b: 任意; }'.
  Object literal may only specify known properties, and 'z' does not exist in type '{ a: 任意; b: 任意; }'.


==== tests/cases/compiler/objectLiteralFreshnessWithSpread.ts (1 errors) ====
    let x = { b: 1, extra: 2 }
    let xx: { a, b }  = { a: 1, ...x, z: 3 } // error for 'z', no error for 'extra'
                                      ~~~~
!!! error TS2322: Type '{ z: 数字; b: 数字; extra: 数字; a: 数字; }' is not assignable to type '{ a: 任意; b: 任意; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'z' does not exist in type '{ a: 任意; b: 任意; }'.
    